--- a/Makefile.am
+++ b/Makefile.am
@@ -3,3 +3,9 @@ MAINTAINERCLEANFILES	= Makefile.in
 SUBDIRS 		= source data doc
 EXTRA_DIST 		= asc.kdevprj AUTHORS COPYING ChangeLog INSTALL README TODO asc.lsm
 AUTOMAKE_OPTIONS 	= foreign
+
+installer: 
+	cd $(top_srcdir)/installer && makensis pbp.nsi
+
+pbpinstaller: 
+	cd $(top_srcdir)/installer && makensis pbp.nsi
