Better scrolling in selection  Translation-objects now working

--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -526,6 +526,9 @@
 					RelativePath="..\..\..\dialogs\emailsetup.cpp">
 				</File>
 				<File
+					RelativePath="..\..\..\dialogs\nextcampaignmap.cpp">
+				</File>
+				<File
 					RelativePath="..\..\..\dialogs\unitcounting.cpp">
 				</File>
 				<File
