--- a/source/Makefile.in
+++ b/source/Makefile.in
@@ -502,6 +502,8 @@ uninstall-info: uninstall-info-recursive
 
 htmldoc: doxygen.config
 	doxygen doxygen.config
+	cd libs/paragui
+	make htmldoc
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
