Added multicolor text

--- a/source/Makefile.am
+++ b/source/Makefile.am
@@ -6,6 +6,5 @@ EXTRA_DIST 		= *.cpp *.h *.inc
 
 htmldoc: doxygen.config
 	doxygen doxygen.config
-	cd libs/paragui
-	make htmldoc
-_SOURCES = mapimageexport.cpp
+	cd libs/paragui ; make paraguidoc
+
