--- a/source/unix/asc/Makefile.in
+++ b/source/unix/asc/Makefile.in
@@ -87,7 +87,8 @@ am_asc_OBJECTS = unitctrl.$(OBJEXT) soundList.$(OBJEXT) \
 	legacynetworkloaders.$(OBJEXT) player.$(OBJEXT) \
 	cannedmessages.$(OBJEXT) reactionfire.$(OBJEXT) \
 	mapimageexport.$(OBJEXT) containercontrols.$(OBJEXT) \
-	containerbase-functions.$(OBJEXT) windowing.$(OBJEXT)
+	containerbase-functions.$(OBJEXT) windowing.$(OBJEXT) \
+	turncontrol.$(OBJEXT)
 asc_OBJECTS = $(am_asc_OBJECTS)
 am__DEPENDENCIES_1 =
 asc_DEPENDENCIES =  \
@@ -271,7 +272,7 @@ guidimension.cpp guiiconhandler.cpp guifunctions.cpp iconrepository.cpp gamedial
 infopopup.cpp overviewmapimage.cpp asc-mainscreen.cpp mapfield.cpp overviewmappanel.cpp \
 weathercast.cpp messaginghub.cpp explosivemines.cpp mainscreenwidget.cpp \
 legacynetworkloaders.cpp player.cpp cannedmessages.cpp reactionfire.cpp mapimageexport.cpp \
-containercontrols.cpp containerbase-functions.cpp windowing.cpp
+containercontrols.cpp containerbase-functions.cpp windowing.cpp turncontrol.cpp
 
 asc_LDADD = $(top_builddir)/source/libs/triangul/libtriangul.la \
 $(top_builddir)/source/ai/libai.la $(top_builddir)/source/libs/sdlmm/src/libSDLmm.la \
@@ -434,6 +435,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/textfile_evaluation.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/textfileparser.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/textfiletags.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/turncontrol.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/typen.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/unitctrl.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/vehicle.Po@am__quote@
