--- a/source/win32/msvc/mapeditor/mapeditor.vcproj
+++ b/source/win32/msvc/mapeditor/mapeditor.vcproj
@@ -451,6 +451,9 @@
 					RelativePath="..\..\..\dialogs\editmapparam.cpp">
 				</File>
 				<File
+					RelativePath="..\..\..\dialogs\fieldmarker.cpp">
+				</File>
+				<File
 					RelativePath="..\..\..\dialogs\fileselector.cpp">
 				</File>
 				<File
