New MapProperties dialog in mapeditor  Improved main menu  improved new game dialog

--- a/source/dialogs/Makefile.am
+++ b/source/dialogs/Makefile.am
@@ -11,5 +11,5 @@ libdialogs_la_LIBADD    = @SDL_LIBS@
 libgamedialogs_la_SOURCES   = cargodialog.cpp unitcounting.cpp cargowidget.cpp ammotransferdialog.cpp attackpanel.cpp vehicletypeselector.cpp nextcampaignmap.cpp
 libgamedialogs_la_LIBADD    = @SDL_LIBS@ 
 
-libmapeddialogs_la_SOURCES   = cargoeditor.cpp cargowidget.cpp eventeditor.cpp
+libmapeddialogs_la_SOURCES   = cargoeditor.cpp cargowidget.cpp eventeditor.cpp newmap.cpp
 libmapeddialogs_la_LIBADD    = @SDL_LIBS@
