--- a/source/libs/paragui/src/font/Makefile.in
+++ b/source/libs/paragui/src/font/Makefile.in
@@ -75,6 +75,7 @@ AUTOCONF = @AUTOCONF@
 AUTOHEADER = @AUTOHEADER@
 AUTOMAKE = @AUTOMAKE@
 AWK = @AWK@
+BOOST_LIBS = @BOOST_LIBS@
 CC = @CC@
 CCDEPMODE = @CCDEPMODE@
 CFLAGS = @CFLAGS@
