--- a/source/libs/paragui/src/widgets/Makefile.am
+++ b/source/libs/paragui/src/widgets/Makefile.am
@@ -1,39 +1,13 @@
 noinst_LTLIBRARIES = libpgwidgets.la
 
-libpgwidgets_la_SOURCES = \
-	pgbutton.cpp \
-	pgcheckbutton.cpp \
-	pgcolumnitem.cpp \
-	pgdropdown.cpp \
-	pgimage.cpp \
-	pglabel.cpp \
-	pglayout.cpp \
-	pglineedit.cpp \
-	pglistboxbaseitem.cpp \
-	pglistbox.cpp \
-	pglistboxitem.cpp \
-	pgmaskedit.cpp \
-	pgmessagebox.cpp \
-	pgpopupmenu.cpp \
-	pgprogressbar.cpp \
-	pgradiobutton.cpp \
-	pgscrollbar.cpp \
-	pgslider.cpp \
-	pgspinnerbox.cpp \
-	pgthemewidget.cpp \
-	pgwidget.cpp \
-	pgwidgetdnd.cpp \
-	pgwidgetlist.cpp \
-	pgscrollwidget.cpp \
-	pgwindow.cpp \
-	pgrichedit.cpp \
-	pgscrollarea.cpp \
-	pgmenubar.cpp \
-	pgmultilineedit.cpp \
-	propstrings_priv.h \
-	propstrings_priv.cpp \
-	pgtooltiphelp.cpp \
-	pgpropertyeditor.cpp
+libpgwidgets_la_SOURCES = pgbutton.cpp 	pgcheckbutton.cpp 	pgcolumnitem.cpp \
+		pgdropdown.cpp 	pgimage.cpp 	pglabel.cpp 	pglayout.cpp 	pglineedit.cpp \
+		pglistboxbaseitem.cpp 	pglistbox.cpp 	pglistboxitem.cpp 	pgmaskedit.cpp 	pgmessagebox.cpp \
+		pgpopupmenu.cpp 	pgprogressbar.cpp 	pgradiobutton.cpp 	pgscrollbar.cpp 	pgslider.cpp \
+		pgspinnerbox.cpp 	pgthemewidget.cpp 	pgwidget.cpp 	pgwidgetdnd.cpp 	pgwidgetlist.cpp \
+		pgscrollwidget.cpp 	pgwindow.cpp 	pgrichedit.cpp 	pgscrollarea.cpp 	pgmenubar.cpp \
+		pgmultilineedit.cpp 	propstrings_priv.h 	propstrings_priv.cpp 	pgtooltiphelp.cpp \
+		pgpropertyeditor.cpp 
 
 libpgwidgets_la_LIBADD = \
 	$(SIGC_LIBS)
@@ -51,3 +25,4 @@ style_cvs:
 
 style_personal:
 	astyle *.cpp
+
