--- a/source/libs/paragui/src/widgets/Makefile.in
+++ b/source/libs/paragui/src/widgets/Makefile.in
@@ -92,6 +92,7 @@ AUTOCONF = @AUTOCONF@
 AUTOHEADER = @AUTOHEADER@
 AUTOMAKE = @AUTOMAKE@
 AWK = @AWK@
+BOOST_LIBS = @BOOST_LIBS@
 CC = @CC@
 CCDEPMODE = @CCDEPMODE@
 CFLAGS = @CFLAGS@
@@ -213,40 +214,14 @@ subdirs = @subdirs@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 noinst_LTLIBRARIES = libpgwidgets.la
-libpgwidgets_la_SOURCES = \
-	pgbutton.cpp \
-	pgcheckbutton.cpp \
-	pgcolumnitem.cpp \
-	pgdropdown.cpp \
-	pgimage.cpp \
-	pglabel.cpp \
-	pglayout.cpp \
-	pglineedit.cpp \
-	pglistboxbaseitem.cpp \
-	pglistbox.cpp \
-	pglistboxitem.cpp \
-	pgmaskedit.cpp \
-	pgmessagebox.cpp \
-	pgpopupmenu.cpp \
-	pgprogressbar.cpp \
-	pgradiobutton.cpp \
-	pgscrollbar.cpp \
-	pgslider.cpp \
-	pgspinnerbox.cpp \
-	pgthemewidget.cpp \
-	pgwidget.cpp \
-	pgwidgetdnd.cpp \
-	pgwidgetlist.cpp \
-	pgscrollwidget.cpp \
-	pgwindow.cpp \
-	pgrichedit.cpp \
-	pgscrollarea.cpp \
-	pgmenubar.cpp \
-	pgmultilineedit.cpp \
-	propstrings_priv.h \
-	propstrings_priv.cpp \
-	pgtooltiphelp.cpp \
-	pgpropertyeditor.cpp
+libpgwidgets_la_SOURCES = pgbutton.cpp 	pgcheckbutton.cpp 	pgcolumnitem.cpp \
+		pgdropdown.cpp 	pgimage.cpp 	pglabel.cpp 	pglayout.cpp 	pglineedit.cpp \
+		pglistboxbaseitem.cpp 	pglistbox.cpp 	pglistboxitem.cpp 	pgmaskedit.cpp 	pgmessagebox.cpp \
+		pgpopupmenu.cpp 	pgprogressbar.cpp 	pgradiobutton.cpp 	pgscrollbar.cpp 	pgslider.cpp \
+		pgspinnerbox.cpp 	pgthemewidget.cpp 	pgwidget.cpp 	pgwidgetdnd.cpp 	pgwidgetlist.cpp \
+		pgscrollwidget.cpp 	pgwindow.cpp 	pgrichedit.cpp 	pgscrollarea.cpp 	pgmenubar.cpp \
+		pgmultilineedit.cpp 	propstrings_priv.h 	propstrings_priv.cpp 	pgtooltiphelp.cpp \
+		pgpropertyeditor.cpp 
 
 libpgwidgets_la_LIBADD = \
 	$(SIGC_LIBS)
