--- a/source/widgets/Makefile.am
+++ b/source/widgets/Makefile.am
@@ -5,6 +5,6 @@ AM_CXXFLAGS             = $(SDL_CFLAGS) $(SIGC_CFLAGS)
 
 noinst_LTLIBRARIES      = libwidgets.la 
 
-libwidgets_la_SOURCES   = textrenderer.cpp bargraphwidget.cpp dropdownselector.cpp  multilistbox.cpp 
+libwidgets_la_SOURCES   = textrenderer.cpp bargraphwidget.cpp dropdownselector.cpp  multilistbox.cpp autoprogressbar.cpp
 libwidgets_la_LIBADD    = @SDL_LIBS@
 
