Updated gui graphics

--- a/source/doxygen.config
+++ b/source/doxygen.config
@@ -88,7 +88,13 @@ FILE_PATTERNS          = *.cpp \
 RECURSIVE              = YES
 EXCLUDE                = tools \
                          clparser \
-                         libs \
+                         libs/bzlib \
+                         libs/getopt \
+                         libs/libsigc++ \
+                         libs/loki \
+                         libs/rand \
+                         libs/sdlmm \
+                         libs/triangul \
                          dos \
                          test
 EXCLUDE_SYMLINKS       = NO
