--- a/configure.in
+++ b/configure.in
@@ -162,15 +162,15 @@ from http://www.libsdl.org/projects/SDL_mixer/ ]]))
 #AC_MSG_RESULT("yes")
 
 
-AC_CHECK_LIB( SDL_ttf, 
-              TTF_RenderText_Solid,, 
-	      AC_MSG_ERROR( [[
-ASC requires the SDL_ttf library. If you have a distribution supplied 
-SDL_ttf.RPM installed, perhaps the SDL_ttf-devel.RPM is missing. 
-If your distribution does not include the SDL_ttf library, you can get it 
-from http://www.libsdl.org/projects/SDL_ttf/ ]]))
-SDL_TTF_LDADD="-lSDL_ttf"
-AC_SUBST(SDL_TTF_LDADD)
+#AC_CHECK_LIB( SDL_ttf, 
+#              TTF_RenderText_Solid,, 
+#	      AC_MSG_ERROR( [[
+#ASC requires the SDL_ttf library. If you have a distribution supplied 
+#SDL_ttf.RPM installed, perhaps the SDL_ttf-devel.RPM is missing. 
+#If your distribution does not include the SDL_ttf library, you can get it 
+#from http://www.libsdl.org/projects/SDL_ttf/ ]]))
+#SDL_TTF_LDADD="-lSDL_ttf"
+#AC_SUBST(SDL_TTF_LDADD)
 
 #AC_MSG_CHECKING("SDL_ttf.h")
 #AC_TRY_COMPILE( [#include <SDL_ttf.h>],[return 0;],
