mount updated  icons are placed in main.con

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -8,7 +8,7 @@ pkgdata_DATA 		= main.con buildings.con mk1.con trrobj.con trrobj2.con asc.gfx u
 pkgdatadir 		= $(datadir)/games/@PACKAGE@
 
 main.con: @MAINCONDATA@
-	../source/tools/linux/asc_mount @MAINCONDATA@ main.con
+	../source/tools/linux/asc_mount @MAINCONDATA@ icons/*.png icons/*.ascgui main.con
 
 clean-local:
 	rm -f main.con
