--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -532,7 +532,7 @@ uninstall-info: uninstall-info-recursive
 
 
 main.con: @MAINCONDATA@
-	../source/tools/linux/asc_mount @MAINCONDATA@ main.con
+	../source/tools/linux/asc_mount @MAINCONDATA@ icons/*.png icons/*.ascgui main.con
 
 clean-local:
 	rm -f main.con
